--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="first-header">
                 <div class="logo">
-                    <img src="/imgs/Logo.png" alt="company-logo" class="">
+                    <img src="imgs/Logo.png" alt="company-logo" class="">
                 </div>
                 <div class="nav-bar">
                     <div class="menu">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="assistance">
                         <div class="icon">
-                            <img src="/imgs/Assistance.png" alt="">
+                            <img src="imgs/Assistance.png" alt="">
                         </div>
                         <div class="assistance-text">
                             <p>Road Assistance</p>
@@ -47,7 +47,7 @@
                     <a href="#" class="orange-button">Book a Service</a>
                     <div class="time-section">
                         <div class="clock">
-                            <img src="/imgs/clock.png" alt="time available">
+                            <img src="imgs/clock.png" alt="time available">
                         </div>
                         <div class="text-section">
                             <h5>We are open</h5>
@@ -71,7 +71,7 @@
                         <li>
                             <div class="flex">
                                 <div class="dollarsign">
-                                    <img src="/imgs/gear.png">
+                                    <img src="imgs/gear.png">
                                 </div>
                                 <div class="gear-text">
                                     <p>Convenient service</p>
@@ -82,7 +82,7 @@
                         <li>
                             <div class="flex">
                                 <div class="dollarsign">
-                                    <img src="/imgs/man.png">
+                                    <img src="imgs/man.png">
                                 </div>
                                 <div class="man-text">
                                     <p>Expert Mechanics</p>
@@ -93,7 +93,7 @@
                         <li>
                             <div class="flex">
                                 <div class="dollarsign">
-                                    <img src="/imgs/Dollarsign.png">
+                                    <img src="imgs/Dollarsign.png">
                                 </div>
                                 <div class="dollarsign-text">
                                     <p>Transparent Pricing</p>
@@ -148,7 +148,7 @@
                         <li>
                             <div class="flex">
                                 <div class="image-box">
-                                    <img src="/imgs/Number1.png">
+                                    <img src="imgs/Number1.png">
                                 </div>
                                 <div class="dollarsign-text">
                                     <p>Get a Quote</p>
@@ -159,7 +159,7 @@
                         <li>
                             <div class="flex">
                                 <div class="image-box">
-                                    <img src="/imgs/Number2.png">
+                                    <img src="imgs/Number2.png">
                                 </div>
                                 <div class="dollarsign-text">
                                     <p>Book an Appointment</p>
@@ -170,7 +170,7 @@
                         <li>
                             <div class="flex">
                                 <div class="image-box">
-                                    <img src="/imgs/Number3.png">
+                                    <img src="imgs/Number3.png">
                                 </div>
                                 <div class="dollarsign-text">
                                     <p>Get your service done</p>
@@ -197,7 +197,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/littlecar.png">
+                                    <img src="imgs/littlecar.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Diagnostics</p>
@@ -207,7 +207,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/node.png">
+                                    <img src="imgs/node.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Engine repair</p>
@@ -217,7 +217,7 @@
                         <li>
                             <div class="offers orange-highlight">
                                 <div class="offer-image">
-                                    <img src="/imgs/wheel.png">
+                                    <img src="imgs/wheel.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Wheel Repair</p>
@@ -227,7 +227,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/oilbottle.png">
+                                    <img src="imgs/oilbottle.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Oil Filter</p>
@@ -241,7 +241,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/littlecar.png">
+                                    <img src="imgs/littlecar.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Body Work</p>
@@ -251,7 +251,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/battery.png">
+                                    <img src="imgs/battery.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Batteries</p>
@@ -261,7 +261,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/shield.png">
+                                    <img src="imgs/shield.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Insurance Claim</p>
@@ -271,7 +271,7 @@
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
-                                    <img src="/imgs/spanner.png">
+                                    <img src="imgs/spanner.png">
                                 </div>
                                 <div class="offer-text">
                                     <p>Custom Service</p>
@@ -356,7 +356,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum1.png">
+                                <img src="imgs/lopisum1.png">
                             </div>
                             <div class="offer-text">
                                 <p>Mercedes Benz</p>
@@ -366,7 +366,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum2.png">
+                                <img src="imgs/lopisum2.png">
                             </div>
                             <div class="offer-text">
                                 <p>Lexus</p>
@@ -376,7 +376,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum3.png">
+                                <img src="imgs/lopisum3.png">
                             </div>
                             <div class="offer-text">
                                 <p>Toyota</p>
@@ -386,7 +386,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum4.png">
+                                <img src="imgs/lopisum4.png">
                             </div>
                             <div class="offer-text">
                                 <p><Label>Lamborghini</Label></p>
@@ -396,7 +396,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum5.png">
+                                <img src="imgs/lopisum5.png">
                             </div>
                             <div class="offer-text">
                                 <p>Ferrari</p>
@@ -410,7 +410,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum1.png">
+                                <img src="imgs/lopisum1.png">
                             </div>
                             <div class="offer-text">
                                 <p>Aston Martin</p>
@@ -420,7 +420,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum2.png">
+                                <img src="imgs/lopisum2.png">
                             </div>
                             <div class="offer-text">
                                 <p>Ford</p>
@@ -430,7 +430,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum3.png">
+                                <img src="imgs/lopisum3.png">
                             </div>
                             <div class="offer-text">
                                 <p>Honda</p>
@@ -440,7 +440,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum4.png">
+                                <img src="imgs/lopisum4.png">
                             </div>
                             <div class="offer-text">
                                 <p>Rolls Royce</p>
@@ -450,7 +450,7 @@
                     <li>
                         <div class="flex">
                             <div class="brands-image">
-                                <img src="/imgs/lopisum5.png">
+                                <img src="imgs/lopisum5.png">
                             </div>
                             <div class="offer-text">
                                 <p>Range Rover</p>
