--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/mechanic.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
     <!-- MAJOR SECTION 1 -->
     <div id="major-section-1">
         <div class="container">
-            <div class="flex">
+            <div class="flex flex-sm-column">
                 <div class="left-section">
                     <h1>Get your vehicle<br> service done online<br> at one place</h1>
                     <a href="#" class="orange-button">Book a Service</a>
@@ -64,7 +64,7 @@
     <!-- QUOTE SECTION -->
     <div id="quote-section">
         <div class="container">
-            <div class="flex">
+            <div class="flex flex-sm-column">
                 <div class="quote-text">
                     <h2>We are taking car<br>servicing seriously</h2>
                     <ul>
@@ -138,7 +138,7 @@
     <!-- THIRD-SECTION -->
     <div id="third-section">
         <div class="container2">
-            <div class="flex">
+            <div class="flex flex-sm-column">
                 <div class="text2-section">
                     <p>We follow a clear<br> process to help you<br> out</p>
                     <h5>Through True Rich Attended does no end it his mother<br> since real had half every him case in packages enquire</h5>
@@ -193,7 +193,7 @@
                     <p>We offer full service auto repair<br> & maintenance</p>
                 </div>
                 <div class="flex-1">
-                    <ul class="flex">
+                    <ul class="flex flex-sm-column">
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
@@ -237,7 +237,7 @@
                     </ul>
                 </div>
                 <div class="flex-2">
-                    <ul class="flex">
+                    <ul class="flex flex-sm-column">
                         <li>
                             <div class="offers">
                                 <div class="offer-image">
@@ -299,7 +299,7 @@
                 </div>
             </div>
             <div class="text-container">
-                <ul class="flex">
+                <ul class="flex flex-sm-column">
                     <li>
                         <div class="blue-text">
                             <div class="offer-image">
@@ -316,7 +316,7 @@
                                 <h3>10+</h3>
                             </div>
                             <div class="tiny-text">
-                                <p>Tears Experience</p>
+                                <p>Years Experience</p>
                             </div>
                         </div>
                     </li>
@@ -352,7 +352,7 @@
                 <p>Brands we Serve</p>
             </div>
             <div class="brand-flex">
-                <ul class="flex">
+                <ul class="flex flex-sm-column">
                     <li>
                         <div class="flex">
                             <div class="brands-image">
@@ -406,7 +406,7 @@
                 </ul>    
             </div>
             <div class="brand-flex1">
-                <ul class="flex">
+                <ul class="flex flex-sm-column">
                     <li>
                         <div class="flex">
                             <div class="brands-image">
