--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
                 <div class="nav-bar">
                     <div class="menu">
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
+                            <li><a href="services.html">Services</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
@@ -294,8 +294,7 @@
                        <p>Get in touch with us for<br> your service related query</p>
                    </div>
                 </div>
-                <div class="image-2">
-                   
+                <div class="image-2">                   
                 </div>
             </div>
             <div class="text-container">
@@ -352,9 +351,9 @@
                 <p>Brands we Serve</p>
             </div>
             <div class="brand-flex">
-                <ul class="flex flex-sm-column">
+                <ul class="flex flex-sm">
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum1.png">
                             </div>
@@ -364,7 +363,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum2.png">
                             </div>
@@ -374,7 +373,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum3.png">
                             </div>
@@ -384,7 +383,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum4.png">
                             </div>
@@ -394,7 +393,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum5.png">
                             </div>
@@ -406,9 +405,9 @@
                 </ul>    
             </div>
             <div class="brand-flex1">
-                <ul class="flex flex-sm-column">
+                <ul class="flex flex-sm">
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum1.png">
                             </div>
@@ -418,7 +417,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum2.png">
                             </div>
@@ -428,7 +427,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum3.png">
                             </div>
@@ -438,7 +437,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum4.png">
                             </div>
@@ -448,7 +447,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="flex">
+                        <div class="flex flex-sm-box">
                             <div class="brands-image">
                                 <img src="imgs/lopisum5.png">
                             </div>
