--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
                     <p>How we work and the process we follow</p>
                     <div class="flex">
                         <div class="check-image">
-                            <img src="/imgs/Checkmark.png" alt="">
+                            <img src="imgs/Checkmark.png" alt="">
                         </div>
                         <div class="check-text">
                             <h3>Through True Rich Attended does no end it his mother since</h3>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="flex">
                         <div class="check-image">
-                            <img src="/imgs/Checkmark.png" alt="">
+                            <img src="imgs/Checkmark.png" alt="">
                         </div>
                         <div class="check-text">
                             <h3>Through True Rich Attended does no end it his mother since</h3>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="flex">
                         <div class="check-image">
-                            <img src="/imgs/Checkmark.png" alt="">
+                            <img src="imgs/Checkmark.png" alt="">
                         </div>
                         <div class="check-text">
                             <h3>Through True Rich Attended does no end it his mother since</h3>
@@ -137,8 +137,8 @@
                     </div>
                 </div>
                 <div class="process-images flex">
-                    <img src="/imgs/sports-car.png" alt="">
-                    <img src="/imgs/racing-car.png" alt="">
+                    <img src="imgs/sports-car.png" alt="">
+                    <img src="imgs/racing-car.png" alt="">
                 </div>
             </div>
             <div class="process-section2 flex">
